turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: expected class or object definition
setCouleurBrosse(colors((pos+1)%taille));
^LangtonsAnt:20: error: expected class or object definition
baisseBrosse();
^LangtonsAnt:21: error: expected class or object definition
leveBrosse();
^LangtonsAnt:22: error: expected class or object definition
avance();
^LangtonsAnt:23: error: Unmatched closing brace '}' ignored here
} 
^LangtonsAnt:26: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:39: error: Unmatched closing brace '}' ignored here
}
^